# skills-as-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/code-reviewer/: SKILL.md
examples/daily-standup/: SKILL.md
examples/web-search/: SKILL.md
src/skills_as_mcp/: __init__.py  cli.py  parser.py  server.py  store.py
tests/: conftest.py  test_parser.py  test_resources.py  test_server.py  test_store.py
