[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-as-mcp"
version = "0.4.0"
description = "MCP server for dynamic AI agent skill management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "sumo" }]
keywords = ["mcp", "skills", "ai-agent", "fastmcp", "agent-skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
skills-as-mcp = "skills_as_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_as_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
